fix .token-select on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1148,8 +1148,8 @@ form .button {
   @media (max-width: 575px) {
     .token-select.single .selectize-input {
       font-size: 14px;
-      padding-top: 21px;
-      padding-bottom: 4px; } }
+      padding-top: 6px;
+      padding-bottom: 6px; } }
   .token-select.single .selectize-input > input {
     line-height: 15px !important; }
 
